@@ -7,6 +7,7 @@ Repository head::
      repocutter reduce now has simpler behavior and can take input from stdin.
      reposurgeon incorporarte can handle symlinks
      repocutter can now select and deselect node spans within revisions.
+     In repocutter sift/expunge, a new -f option disables regexp interpretation.
 
 4.30: 2021-10-13::
      Speed up DoTagify by parallelizing it.
